--- a/css/style.css
+++ b/css/style.css
@@ -6,18 +6,52 @@
 body {
     margin: 0;
     padding: 0;
-    background:rgb(218, 68, 68);
+    background-image: url("../images/fundos.jpg");
+    background-size: 210vh, 200vh;
+    background-repeat: no-repeat;
     font-size: 1em;
     line-height: 1.5em;
 }
 
 .container {
+    position: absolute;
+    top: 15vh;
+    left: 35%;
+    width: 35%;
     max-width: 640px;
     margin: 50px auto;
     background: #fff;
-    padding: 0 20px 20px 20px;
+    padding: 0 30px 60px 30px;
+    height: 60vh;
     border-radius: 10px;
 }
+
+.container .peso input {
+    position:relative;
+    top: 4vh;
+    padding: 0.5vh;
+    width:100%;
+}
+
+.container .altura input {
+    position:relative;
+    top: 6vh;
+    padding: 0.5vh;
+    width:100%;
+}
+
+.container button {
+    position:relative;
+    top: 8vh;
+    padding: 0.5vh;
+    width:100%;
+}
+
+.container p {
+    position:relative;
+    top: 10vh;
+}
+
 
 #logo {
     display: block;
@@ -28,6 +62,7 @@ body {
     clear: both;
     width: 100%;
     text-align: center;
+    font-family: sans-serif;
 }
 
 #coluna1{
@@ -53,3 +88,4 @@ body {
     width: 100%;
     text-align: center;
 }
+
